--- a/src/style.css
+++ b/src/style.css
@@ -205,6 +205,8 @@ html, body {
 	cursor: pointer;
 	background-color: #fff;
 	line-height: 22px;
+	color: #000;
+	text-decoration: none;
 }
 .bit_list__item:hover {
 	background-color: #E7EAED;
@@ -259,6 +261,10 @@ html, body {
 	display: flex;
 	align-items: center;
 }
+.bit_list a {
+	color: #000;
+	text-decoration: none;
+}
 
 
 /* widget */
@@ -285,6 +291,7 @@ html, body {
 
 .bit_header-container {
 	padding: 20px 0;
+	padding-bottom: 10px;
 }
 .bit_header {
 	display: grid;
@@ -297,7 +304,7 @@ html, body {
 	display: block;
 	width: 200px;
 	background-color: #CDA379;
-	margin-top: 20px;
+	margin-top: 10px;
 	z-index: 1;
 }
 .bit_header__exit {
@@ -319,6 +326,21 @@ html, body {
 }
 .bit_header__select {
 	width: 300px;
+}
+
+/* bread */
+
+.bit_bread {
+	margin-bottom: 40px;
+}
+.bit_bread__item {
+	font-size: 0.8rem;
+	text-decoration: none;
+	color: #7f8385;
+}
+.bit_bread__item_active {
+	font-weight: 400;
+	color: #000;
 }
 
 /* toggler */
@@ -378,6 +400,10 @@ html, body {
 	color: #ED3F3F;
 	margin-top: 20px;
 }
+.bit_script__list a {
+	text-decoration: none;
+	color: #000;
+}
 
 /* block */
 
@@ -389,9 +415,9 @@ html, body {
 	column-gap: 40px;
 	min-height: 40vh;
 }
-.bit_block .bit_list {
+/* .bit_block .bit_list {
 	max-height: 50vh;
-}
+} */
 .bit_block__header {
 	display: flex;
 	justify-content: space-between;
@@ -466,6 +492,8 @@ html, body {
 }
 .bit_specialist__img {
 	width: 60px;
+	height: 60px;
+	border-radius: 50%;
 	object-fit: cover;
 }
 .bit_specialist__name {
@@ -478,7 +506,7 @@ html, body {
 }
 .bit_specialist__text {
 	margin-top: 10px;
-	margin-bottom: 20px;
+	margin-bottom: 10px;
 	font-weight: 400;
 }
 .bit_specialist__list-item {
@@ -506,6 +534,7 @@ html, body {
 }
 .bit_block_calendar {
 	grid-template-columns: 1fr 1fr;
+	align-items: start;
 }
 .bit_calendar__days {
 	margin-bottom: 20px;
@@ -577,6 +606,9 @@ html, body {
 	border: 1px solid #CDA379;
 	color: white;
 }
+.bit_time__text {
+	margin-top: 30px;
+}
 
 /* personal */
 .bit_block_personal {
@@ -592,6 +624,16 @@ html, body {
 }
 .bit_personal .bit_input-container {
 	margin-bottom: 20px;
+}
+.bit_specialist__services .bit_specialist__text {
+	padding-bottom: 10px;
+	border-bottom: 1px solid #BECCD2;
+}
+
+/* confirm */
+
+.bit_block_confirm {
+	grid-template-columns: 1fr 1fr;
 }
 
 @media (max-width: 1440px) {
