--- a/src/css/style.css
+++ b/src/css/style.css
@@ -32,9 +32,6 @@
 #widget-1bit  .bit_text {
 	font-size: 1rem;
 }
-#widget-1bit  .bit_text_info {
-	
-}
 
 /* title */
 
@@ -72,12 +69,14 @@
 	font-family: 'Open Sans';
 	font-size: 1rem;
 	font-weight: 300;
+	user-select: auto;
 }
 #widget-1bit  .bit_input_checkbox {
 	width: 20px;
 	min-width: auto;
 	height: 20px;
 	cursor: pointer;
+	user-select: auto;
 }
 #widget-1bit  .bit_input__header {
 	display: flex;
@@ -87,6 +86,7 @@
 }
 #widget-1bit  .bit_input__label {
 	flex-shrink: 0;
+	user-select: auto;
 }
 #widget-1bit  .bit_input_error {
 	border: 1px solid #ED3F3F;
@@ -686,10 +686,10 @@
 	margin-bottom: 50px;
 	color: grey;
 }
-
-@media (max-width: 1440px) {
-	
+#widget-1bit  .bit_result .bit_btn {
+	margin-top: 30px;
 }
+
 
 @media (max-width: 1024px) {
 	#widget-1bit  .bit_container {
@@ -710,7 +710,7 @@
 	}
 
 	/* block */
-	#widget-1bit  .bit_block_service, .bit_specialist, #widget-1bit  .bit_block_calendar, #widget-1bit  .bit_block_personal {
+	#widget-1bit  .bit_block_service, #widget-1bit .bit_specialist, #widget-1bit  .bit_block_calendar, #widget-1bit  .bit_block_personal {
 		grid-template-columns: 1fr;
 	}
 
@@ -790,6 +790,15 @@
 	}
 	#widget-1bit  .bit_title_second  {
 		font-size: 1rem;
+	}
+	#widget-1bit  .bit_input-container_checkbox {
+		display: flex;
+		flex-direction: row-reverse;
+		/* align-items: center; */
+		justify-content: flex-end;
+	}
+	#widget-1bit  .bit_input-container_checkbox .bit_input__error {
+		text-align: left;
 	}
 
 	/* header */
