--- a/src/css/style.css
+++ b/src/css/style.css
@@ -200,6 +200,7 @@
 	max-height: 60vh;
 	overflow-y: auto;
 	padding: 20px;
+	z-index: 1;
 }
 #widget-1bit  .bit_list__item {
 	display: flex;
@@ -505,6 +506,7 @@
 	box-shadow: 0px 4px 8px 0px rgba(34, 60, 80, 0.2);
 	max-height: 500px;
 	overflow-y: auto;
+	z-index: 2;
 }
 #widget-1bit  .bit_search__list-item {
 	padding: 10px;
@@ -512,6 +514,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+	background-color: #fff;
 }
 #widget-1bit  .bit_search__list-item:hover {
 	background-color: #E7EAED;
@@ -735,6 +738,9 @@
 		width: 100%;
 		padding: 0 20px;
 	}
+	#widget-1bit  .bit_widget_open {
+		padding-bottom: 150px;
+	}
 
 	/* header */
 	#widget-1bit  .bit_header {
@@ -782,6 +788,7 @@
 		width: 100%;
 		padding: 0 20px;
 	}
+	
 	#widget-1bit  .bit_shadow {
 		box-shadow: none;
 	}
